--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   travis-cargo --only stable doc
 after_success:
 - travis-cargo --only stable doc-upload
-- travis-cargo --only stable coveralls --no-sudo --verify
+- travis-cargo --only nightly coveralls --no-sudo --verify
 env:
   global:
   - TRAVIS_CARGO_NIGHTLY_FEATURE="nightly-testing"
